--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Challenge-markdown</title>
 </head>
@@ -55,9 +55,9 @@
 <h2>TL;DR</h2>
 <p>first day of holiday went south.</p>
 
-<a href="https://github.com/grgdhiraj/markdown/blob/master/README.md">PREVIOUS</a>
+<p><a href="https://github.com/grgdhiraj/markdown/blob/master/README.md">PREVIOUS</a>
 || Dimitry ||
-    <a href="https://github.com/Emma-Belg/silver/blob/master/readme-Emma.md">NEXT</a>
+    <a href="https://github.com/Emma-Belg/silver/blob/master/readme-Emma.md">NEXT</a></p>
 
 
 </body>
