--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <h2>TL;DR</h2>
 <p>first day of holiday went south.</p>
 
-<p><a href="https://github.com/grgdhiraj/markdown/blob/master/README.md">PREVIOUS</a>
+<p><a href="https://grgdhiraj.github.io/markdown-warmup-css.io">PREVIOUS</a>
 || Dimitry ||
-    <a href="https://github.com/Emma-Belg/silver/blob/master/readme-Emma.md">NEXT</a></p>
+    <a href="https://emma-belg.github.io/CSS22Nov">NEXT</a></p>
 
 <img id="bean" src="https://media3.giphy.com/media/9PgvV8ale90lQwfQTZ/giphy.gif?cid=790b7611ed0f4b1579c40438f507e4d6bd7e9df878643bb8&rid=giphy.gif">
 
